--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -2,20 +2,20 @@
   Layout = "_Layout";
 }
 
-@model Factory.Models.Machine
+@using Factory.Models;
+@model List<Factory.Models.Machine>;
 
-<h2>Add a engineers</h2>
+<h1>Machines</h1>
 
-<h4>Add a engineers to this machine: @Html.DisplayFor(model => model.Name)</h4>
-
-@using (Html.BeginForm())
+@if (@Model.Count == 0)
 {
-  @Html.HiddenFor(model => model.MachineId)
+  <h3>No machines have been added yet!</h3>
+} 
 
-  @Html.Label("Select engineers")
-  @Html.DropDownList("EngineerId")
-
-  <input type="submit" value="Save" />
+@foreach (Machine machine in Model)
+{
+  <li>@Html.ActionLink($"{machine.Name}", "Details", new { id = machine.MachineId })</li>
 }
 
-<p>@Html.ActionLink("Back to list", "Index")</p>
+<p>@Html.ActionLink("Add new machine", "Create")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
