--- a/Factory/Views/Home/index.cshtml
+++ b/Factory/Views/Home/index.cshtml
@@ -4,7 +4,6 @@
 
 <h1>Dr Sillystringz Factorium Emporium With a Moratorium on Troublesome Questions</h1>
 
-<p>Code to include list for machines and engineers on splash</p>
 
-<p>@Html.ActionLink("See just machines", "Index", "Machines")</p> 
-<p>@Html.ActionLink("See just engineers", "Index", "Engineers")</p>
+<p>@Html.ActionLink("See machines", "Index", "Machines")</p> 
+<p>@Html.ActionLink("See engineers", "Index", "Engineers")</p>
