--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -10,11 +10,11 @@
 
 @if(@Model.JoinEntities.Count == 0)
 {
-  <p>'This engineer is not assigned to any machines'</p>
+  <p>This engineer is not assigned to any machines</p>
 }
 else
 {
-  <h4>'Machines this engineer is assigned to':</h4>
+  <h4>Machines this engineer is assigned to:</h4>
   <ul>
   @foreach(var join in Model.JoinEntities)
   {
@@ -23,6 +23,7 @@ else
   </ul>
 }
 
+<p>@Html.ActionLink("Add a Machine", "AddMachine", new { id = Model.EngineerId })</p>
 <p>@Html.ActionLink("Back to Engineers", "Index")</p>
 <p>@Html.ActionLink("Edit Engineer", "Edit", new { id = Model.EngineerId })</p>
 <p>@Html.ActionLink("Delete Engineer", "Delete", new { id = Model.EngineerId })</p>
